---
source: tests/golden_tests.rs
input_file: tests/golden_tests/mutual_recursion/len.bend
---
@Len = ((@Len__C0 (0 a)) a)

@Len__C0 = (* (a c))
  & $(b c) ~ [+1]
  & @Len ~ (a b)

@List/Cons = (a (b ((a (b c)) (* c))))

@List/Nil = (* (a a))

@main = g
  & @Len ~ (f g)
  & @List/Cons ~ (* (e f))
  & @List/Cons ~ (* (d e))
  & @List/Cons ~ (* (c d))
  & @List/Cons ~ (* (b c))
  & @List/Cons ~ (* (a b))
  & @List/Cons ~ (* (@List/Nil a))
